index and img rounte links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="xxx.png" />
 
     <link rel="canonical" href="https://allonga-records.com/" />
-    <link rel="shortcut icon" href="file:///Users/szkl.adam/NÖRD/Website/pics/nord-favicon.png" />
+    <link rel="shortcut icon" href="/pics/nord-favicon.png" />
     <link rel="stylesheet" type="text/css" media="all" href="style.css" />
 
 </head>
@@ -25,7 +25,7 @@
     <section>
         <div class="firstview">
             <div class="logo">
-                <img src="file:///Users/szkl.adam/NÖRD/Website//pics/NÖRD logo FIN-13.png" alt="NÖRD logo" title="NÖRD">
+                <img src="/pics/NÖRD logo FIN-13.png" alt="NÖRD logo" title="NÖRD">
             </div>
             
             <div class="introduction">
@@ -39,38 +39,38 @@
     <section>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
                 <a href="https://www.spotify.com">Spotify</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
                 <a href="https://www.spotify.com">Apple Podcast</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
                 <a href="https://www.spotify.com">Google Podcast</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-youtube.png" class="icon" alt="YouTube logo" title="YouTube"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-youtube.png" class="icon" alt="YouTube logo" title="YouTube"></a><br>
                 <a href="https://www.spotify.com">YouTube</a>
             </div>
         </div>
         <br>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://discord.gg/ezhJBhHk"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
+                <a href="https://discord.gg/ezhJBhHk"><img src="/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
                 <a href="https://discord.gg/ezhJBhHk">Discord</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
                 <a href="https://www.spotify.com">Facebook</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
                 <a href="https://www.spotify.com">Instagram</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="file:///Users/szkl.adam/NÖRD/Website/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
+                <a href="https://www.spotify.com"><img src="/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
                 <a href="https://www.spotify.com">TikTok</a>
             </div>
         </div>
