--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 <body>
     <section>
         <div class="firstview">
-            <div class="logo">
-                <img src="/pics/NÖRD logo FIN-13.png" alt="NÖRD logo" title="NÖRD">
+            <div class="logo"> 
+                <img src="/nord-test/pics/NORD-logo-FIN-13-sm.png" alt="NÖRD logo" title="NÖRD logo">
             </div>
             
             <div class="introduction">
                 <h1>NÖRD podcast</h1>
-                <p>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról</p><br>
+                <p>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról. Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a Discord közösségünkhöz!</p><br>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3DWRmBAE1Q5rIFd9uVAy65?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
