--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             
             <div class="introduction">
                 <h1>NÖRD podcast</h1>
-                <p>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról. Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a Discord közösségünkhöz!</p><br>
+                <p>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról. Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a <a href="https://discord.gg/ezhJBhHk">Discord</a> közösségünkhöz!</p><br>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3DWRmBAE1Q5rIFd9uVAy65?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
@@ -39,38 +39,38 @@
     <section>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
                 <a href="https://www.spotify.com">Spotify</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
                 <a href="https://www.spotify.com">Apple Podcast</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
                 <a href="https://www.spotify.com">Google Podcast</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-youtube.png" class="icon" alt="YouTube logo" title="YouTube"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-youtube.png" class="icon" alt="YouTube logo" title="YouTube"></a><br>
                 <a href="https://www.spotify.com">YouTube</a>
             </div>
         </div>
         <br>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://discord.gg/ezhJBhHk"><img src="/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
+                <a href="https://discord.gg/ezhJBhHk"><img src="/nord-test/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
                 <a href="https://discord.gg/ezhJBhHk">Discord</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
                 <a href="https://www.spotify.com">Facebook</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
                 <a href="https://www.spotify.com">Instagram</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
+                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
                 <a href="https://www.spotify.com">TikTok</a>
             </div>
         </div>
