--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="xxx.png" />
 
     <link rel="canonical" href="https://allonga-records.com/" />
-    <link rel="shortcut icon" href="/pics/nord-favicon.png" />
+    <link rel="shortcut icon" href="/nord-test/pics/nord-favicon.png" />
     <link rel="stylesheet" type="text/css" media="all" href="style.css" />
 
 </head>
@@ -29,8 +29,8 @@
             </div>
             
             <div class="introduction">
-                <h1>NÖRD podcast</h1>
-                <p>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról. Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a <a href="https://discord.gg/ezhJBhHk">Discord</a> közösségünkhöz!</p><br>
+                <h1>NÖRD PODCAST</h1>
+                <p>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról. Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a <b><a href="https://discord.gg/ezhJBhHk">Discord</a></b> közösségünkhöz!</p><br>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3DWRmBAE1Q5rIFd9uVAy65?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
