--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <p><a href="mailto:podcast@nord.hu">podcast@nord.hu</a></p>
         <p>&copy; 2023</p>
     </div>
+    <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=V7mQ9n"></script>
 </body>
 
 
