--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="introduction">
                 <h1>NÖRD PODCAST</h1>
                 <h2>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról.</h2><br>
-                <p>Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a &#128126 <b><a href="https://discord.gg/ezhJBhHk">Discord</a></b> &#128126 közösségünkhöz!</p></p><br>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3DWRmBAE1Q5rIFd9uVAy65?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                <p>Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a &#128126 <b><a href="https://discord.gg/mXMjJnErAb">Discord</a></b> &#128126 közösségünkhöz!</p></p><br>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3QTVNDF80Y3A9XrEbUfjhI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
     </section>
