--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <section>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
-                <a href="https://www.spotify.com">Spotify</a>
+                <a href="https://open.spotify.com/show/3QTVNDF80Y3A9XrEbUfjhI?si=e0a1fe22c0e64b11"><img src="/nord-test/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
+                <a href="https://open.spotify.com/show/3QTVNDF80Y3A9XrEbUfjhI?si=e0a1fe22c0e64b11">Spotify</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
-                <a href="https://www.spotify.com">Apple Podcast</a>
+                <a href="https://podcasts.apple.com/gb/podcast/n%C3%B6rd/id1711841035"><img src="/nord-test/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
+                <a href="https://podcasts.apple.com/gb/podcast/n%C3%B6rd/id1711841035">Apple Podcast</a>
             </div>
             <div class="iconitem">
                 <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
@@ -59,16 +59,16 @@
         <br>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://discord.gg/ezhJBhHk"><img src="/nord-test/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
-                <a href="https://discord.gg/ezhJBhHk">Discord</a>
+                <a href="https://discord.gg/mXMjJnErAb"><img src="/nord-test/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
+                <a href="https://discord.gg/mXMjJnErAb">Discord</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
-                <a href="https://www.spotify.com">Facebook</a>
+                <a href="https://www.facebook.com/diceandsorcery"><img src="/nord-test/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
+                <a href="https://www.facebook.com/diceandsorcery">Facebook</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
-                <a href="https://www.spotify.com">Instagram</a>
+                <a href="https://www.instagram.com/diceandsorcery/"><img src="/nord-test/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
+                <a href="https://www.instagram.com/diceandsorcery/">Instagram</a>
             </div>
             <div class="iconitem">
                 <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
