--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="introduction">
                 <h1>NÖRD PODCAST</h1>
                 <h2>Videó és asztali játékok, filmek és sorozatok, könyvek és aktualitások a popkultúra geek oldaláról.</h2><br>
-                <p>Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a &#128126 <b><a href="https://discord.gg/mXMjJnErAb">Discord</a></b> &#128126 közösségünkhöz!</p></p><br>
+                <p>Hallgasd meg a podcastunk epizódjait a kedvenc podcast alkalmazásodban és csatlakozz a &#128126 <b><a href="https://discord.gg/mXMjJnErAb" target="_blank">Discord</a></b> &#128126 közösségünkhöz!</p></p><br>
                 <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3QTVNDF80Y3A9XrEbUfjhI?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             </div>
         </div>
@@ -41,39 +41,39 @@
         <br>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://open.spotify.com/show/3QTVNDF80Y3A9XrEbUfjhI?si=e0a1fe22c0e64b11"><img src="/nord-test/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
-                <a href="https://open.spotify.com/show/3QTVNDF80Y3A9XrEbUfjhI?si=e0a1fe22c0e64b11">Spotify</a>
+                <a href="https://open.spotify.com/show/3QTVNDF80Y3A9XrEbUfjhI?si=e0a1fe22c0e64b11" target="_blank"><img src="/nord-test/pics/icon-spotify.png" class="icon" alt="Spotify logo" title="Spotify"></a><br>
+                <a href="https://open.spotify.com/show/3QTVNDF80Y3A9XrEbUfjhI?si=e0a1fe22c0e64b11" target="_blank">Spotify</a>
             </div>
             <div class="iconitem">
-                <a href="https://podcasts.apple.com/gb/podcast/n%C3%B6rd/id1711841035"><img src="/nord-test/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
-                <a href="https://podcasts.apple.com/gb/podcast/n%C3%B6rd/id1711841035">Apple Podcast</a>
+                <a href="https://podcasts.apple.com/gb/podcast/n%C3%B6rd/id1711841035" target="_blank"><img src="/nord-test/pics/icon-apple-podcast.png" class="icon" alt="Apple Podcast logo" title="Apple podcast"></a><br>
+                <a href="https://podcasts.apple.com/gb/podcast/n%C3%B6rd/id1711841035" target="_blank">Apple Podcast</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
-                <a href="https://www.spotify.com">Google Podcast</a>
+                <a href="https://www.spotify.com" target="_blank"><img src="/nord-test/pics/icon-google-podcast.png" class="icon" alt="Google Podcast logo" title="Google podcast"></a><br>
+                <a href="https://www.spotify.com" target="_blank">Google Podcast</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-youtube.png" class="icon" alt="YouTube logo" title="YouTube"></a><br>
-                <a href="https://www.spotify.com">YouTube</a>
+                <a href="https://www.spotify.com" target="_blank"><img src="/nord-test/pics/icon-youtube.png" class="icon" alt="YouTube logo" title="YouTube"></a><br>
+                <a href="https://www.spotify.com" target="_blank">YouTube</a>
             </div>
         </div>
         <br>
         <div class="iconcont">
             <div class="iconitem">
-                <a href="https://discord.gg/mXMjJnErAb"><img src="/nord-test/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
-                <a href="https://discord.gg/mXMjJnErAb">Discord</a>
+                <a href="https://discord.gg/mXMjJnErAb" target="_blank"><img src="/nord-test/pics/icon-discord.png" class="icon" alt="Discord logo" title="Discord"></a><br>
+                <a href="https://discord.gg/mXMjJnErAb" target="_blank">Discord</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.facebook.com/diceandsorcery"><img src="/nord-test/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
-                <a href="https://www.facebook.com/diceandsorcery">Facebook</a>
+                <a href="https://www.facebook.com/diceandsorcery" target="_blank"><img src="/nord-test/pics/icon-facebook.png" class="icon" alt="Facebook logo" title="Facebook"></a><br>
+                <a href="https://www.facebook.com/diceandsorcery" target="_blank">Facebook</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.instagram.com/diceandsorcery/"><img src="/nord-test/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
-                <a href="https://www.instagram.com/diceandsorcery/">Instagram</a>
+                <a href="https://www.instagram.com/diceandsorcery/" target="_blank"><img src="/nord-test/pics/icon-instagram.png" class="icon" alt="Instagram logo" title="Instagram"></a><br>
+                <a href="https://www.instagram.com/diceandsorcery/" target="_blank">Instagram</a>
             </div>
             <div class="iconitem">
-                <a href="https://www.spotify.com"><img src="/nord-test/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
-                <a href="https://www.spotify.com">TikTok</a>
+                <a href="https://www.spotify.com" target="_blank"><img src="/nord-test/pics/icon-tiktok.png" class="icon" alt="TikTok logo" title="TikTok"></a><br>
+                <a href="https://www.spotify.com" target="_blank">TikTok</a>
             </div>
         </div>
     </section>
@@ -84,7 +84,7 @@
             <circle class ="circletwo" cx="85" cy="100" r="60" /></svg>
     </div>
     <div>
-        <p><a href="mailto:podcast@nord.hu">podcast@nord.hu</a></p>
+        <p><a href="mailto:nordpodcast@gmail.com">nordpodcast@gmail.com</a></p>
         <p>&copy; 2023</p>
     </div>
     <script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=V7mQ9n"></script>
